[package]
name = "sminit-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.17"
tempfile = "3.3.0"
tokio = {version = "1", features = ["full"]}
